# SAMa

./: README.md
lorentzart/include/: BufferObjects.h  Shaders.h  game_object.h
lorentzart/src/: BufferObjects.cpp  Shaders.cpp  game_object.cpp  main2.cpp
lorentzart/src/shaders/: fragmentShaders.glsl  vertexShader.glsl
poster/: Makefile  bibtex.bib  poster.tex
poster/images/: shadertoyIntro.webm
shadertoy/: CMakeLists.txt
shadertoy/include/: BufferObjects.hpp
shadertoy/src/: main2.cpp
shadertoy/src/shaders/: fragmentShaders.glsl  vertexShader.glsl
